[gd_scene load_steps=15 format=3 uid="uid://du7d5s4cx6six"]

[ext_resource type="Script" path="res://scripts/pant5.gd" id="1_ibdob"]
[ext_resource type="LabelSettings" uid="uid://b8v2jvecxe5da" path="res://themes/letraSola.tres" id="2_ukdhe"]
[ext_resource type="AudioStream" uid="uid://4cdvtb4u8g2u" path="res://sounds/E.wav" id="3_je5j1"]
[ext_resource type="AudioStream" uid="uid://dekbyfum3ye3m" path="res://sounds/intentaO.mp3" id="4_12def"]
[ext_resource type="AudioStream" uid="uid://bm6kq7eelvth0" path="res://sounds/audio (2).mp3" id="5_kiwhg"]
[ext_resource type="AudioStream" uid="uid://bgg6ro08ddx7v" path="res://sounds/I.wav" id="6_73wxj"]
[ext_resource type="AudioStream" uid="uid://cvfbhtp74kf0r" path="res://sounds/A.wav" id="7_ifdn7"]
[ext_resource type="AudioStream" uid="uid://b6hbuiocnshmj" path="res://sounds/Ma.wav" id="8_8yo88"]
[ext_resource type="AudioStream" uid="uid://bfadd4850cald" path="res://sounds/U.wav" id="9_nv8k4"]
[ext_resource type="AudioStream" uid="uid://cxmccq801x6bp" path="res://sounds/O.wav" id="10_aqvhf"]
[ext_resource type="Texture2D" uid="uid://dlkawkf2pey1u" path="res://images/nivel1/Sol.png" id="11_duxpg"]
[ext_resource type="AudioStream" uid="uid://c0vfanx8e85o7" path="res://sounds/excelente.mp3" id="12_lbr7r"]

[sub_resource type="FontFile" id="FontFile_k1e3a"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/17/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/18/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/19/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/23/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/29/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/29/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/31/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/31/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/29/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/31/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_6s52o"]
font = SubResource("FontFile_k1e3a")
font_size = 60
shadow_size = 6
shadow_color = Color(1, 1, 1, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibdob")

[node name="intentaO" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 434.0
offset_top = 381.0
offset_right = 846.0
offset_bottom = 462.0
text = "Intenta otra vez"
label_settings = SubResource("LabelSettings_6s52o")

[node name="siguiente" type="Button" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 577.0
offset_right = 683.0
offset_bottom = 621.0
scale = Vector2(1.23924, 1.52856)
text = "Confirmar
"

[node name="letra3" type="Label" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 463.0
offset_right = 920.0
offset_bottom = 547.0
text = "U"
label_settings = ExtResource("2_ukdhe")

[node name="boton3" type="Button" parent="letra3"]
visibility_layer = 0
layout_mode = 0
offset_left = -30.0
offset_top = 5.0
offset_right = 69.0
offset_bottom = 81.0

[node name="letra2" type="Label" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 460.0
offset_right = 685.0
offset_bottom = 544.0
text = "I"
label_settings = ExtResource("2_ukdhe")

[node name="boton2" type="Button" parent="letra2"]
visibility_layer = 0
layout_mode = 0
offset_left = -25.0
offset_top = 7.0
offset_right = 74.0
offset_bottom = 83.0

[node name="letra1" type="Label" parent="."]
layout_mode = 0
offset_left = 372.0
offset_top = 465.0
offset_right = 446.0
offset_bottom = 549.0
text = "O"
label_settings = ExtResource("2_ukdhe")

[node name="boton1" type="Button" parent="letra1"]
visibility_layer = 0
layout_mode = 0
offset_left = -22.0
offset_top = 6.0
offset_right = 77.0
offset_bottom = 82.0

[node name="correcto" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 529.0
offset_top = 391.0
offset_right = 757.0
offset_bottom = 472.0
text = "Correcto"
label_settings = SubResource("LabelSettings_6s52o")

[node name="palabra" type="Label" parent="."]
layout_mode = 0
offset_left = 574.0
offset_top = 307.0
offset_right = 716.0
offset_bottom = 388.0
text = "S__l"
label_settings = SubResource("LabelSettings_6s52o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.545098, 0.756863, 0.854902, 0.921569)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="audio_e" type="AudioStreamPlayer2D" parent="."]
position = Vector2(372, 465)
stream = ExtResource("3_je5j1")

[node name="intentaO2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_12def")

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kiwhg")

[node name="intentaO3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_12def")

[node name="audio_i" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_73wxj")

[node name="audio_a" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ifdn7")

[node name="audio_m" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_8yo88")

[node name="audio_u" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_nv8k4")

[node name="audio_o" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_aqvhf")

[node name="sigPant" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 564.0
offset_top = 580.0
offset_right = 644.0
offset_bottom = 611.0
scale = Vector2(1.84305, 2.01072)
text = "Siguiente"

[node name="Sol" type="Sprite2D" parent="."]
position = Vector2(619, 207)
scale = Vector2(0.064369, 0.0650536)
texture = ExtResource("11_duxpg")

[node name="exc" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_lbr7r")

[connection signal="pressed" from="siguiente" to="." method="_on_siguiente_pressed"]
[connection signal="pressed" from="letra3/boton3" to="." method="_on_boton_3_pressed"]
[connection signal="pressed" from="letra2/boton2" to="." method="_on_boton_2_pressed"]
[connection signal="pressed" from="letra1/boton1" to="." method="_on_boton_1_pressed"]
[connection signal="pressed" from="sigPant" to="." method="_on_sig_pant_pressed"]
